[package]
name = "heimdal"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = { version = "0.24.5", default-features = false }
termion = { version = "*", default-features = false }
tui = { version = "0.18.0", default-features = false, features = ['termion'] }
byte-unit = { version = "4.0.14", default-features = false }